# kwenta

./: .pre-commit-config.yaml  Dockerfile  Taskfile.yml  dev.Dockerfile  docker-compose.yml  docker-entrypoint.sh  gunicorn.conf.py  manage.py  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_item_options_alter_itemgroup_options_and_more.py  0003_alter_item_price.py
kwenta/: asgi.py  settings.py  wsgi.py
proxy/: nginx.conf
web/static/web/: index.html  package.json
web/static/web/src/: App.tsx  index.css  main.tsx
web/static/web/src/theme/: index.ts
